Kostka trochu existuje

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Kostka</title>
 
         <!-- Bootstrap CSS -->
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,19 +17,19 @@
         <![endif]-->
     </head>
     <body>
-        <h1 class="text-center">Kostka</h1>
-        <div class="container">
-            <figure>
-                <img id="cube" src="img/kostka6.png" alt="Kostka">
-            </figure>
-            <div id="result">Výsledek</div>
-            <button id="game">Hraj</button>
-        </div>
+        <header class="jumbotron bg-danger">
+            <h1 class="display-3 text-center">Kostka</h1>
+        </header>
+        <main>
+            <div class="container">
+                
+            </div>
+        </main>
 
         <!-- jQuery -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <!-- Bootstrap JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script src="js/game.js"></script>
     </body>
 </html>
