Skoro venku z bety

--- a/index.html
+++ b/index.html
@@ -16,13 +16,24 @@
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body>
+    <body class="bg-info">
         <header class="jumbotron bg-danger">
             <h1 class="display-3 text-center">Kostka</h1>
         </header>
         <main>
             <div class="container">
-                
+                <div class="row" id="divKostky"></div>
+            </div>
+            <br>
+            <br>
+            <div class="d-flex justify-content-center">
+                <button id="bThrow" >Hraj</button>
+                <button id="bEndTurn" >Ukončit tah</button>
+            </div>
+            <br>
+            <br>
+            <div class="container">
+                <div class="row" id="divHraci"></div>
             </div>
         </main>
 
