--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Kostka</title>
+        <title>Hra 6 kostek</title>
 
         <!-- Bootstrap CSS -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
     </head>
     <body class="bg-info">
         <header class="jumbotron bg-danger">
-            <h1 class="display-3 text-center">Kostka</h1>
+            <h1 class="display-3 text-center">Hra 6 kostek</h1>
         </header>
         <main>
             <div class="container">
@@ -27,13 +27,19 @@
             <br>
             <br>
             <div class="d-flex justify-content-center">
-                <button id="bThrow" >Hraj</button>
+                <button id="bThrow" >Hodit</button>
                 <button id="bEndTurn" >Ukončit tah</button>
             </div>
             <br>
             <br>
             <div class="container">
                 <div class="row" id="divHraci"></div>
+            </div>
+            <br>
+            <br>
+            <div class="d-flex justify-content-center">
+                <button id="bChangePlayerCount" >Přidat hráče</button>
+                <button id="bRules" >Pravidla</button>
             </div>
         </main>
 
